--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>ALIN EM BUNI</title>
   </head>
   <body>
     <h1>ALIN EM BUNI</h1>
